# Voice-Transcriber

./: CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yaml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/demo/: README.md
examples/: README.md  basic_transcription.py  batch_processing.py  cli_usage.sh
src/persian_transcriber/: cli.py
src/persian_transcriber/utils/: logging.py
