[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-audio-transcriber"
version = "1.0.0"
description = "GPU-accelerated voice transcription toolkit with Persian/Farsi language support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DarkOracle10", email = "darkoracle3860@gmail.com"}
]
maintainers = [
    {name = "DarkOracle10", email = "darkoracle3860@gmail.com"}
]
keywords = [
    "transcription",
    "speech-to-text",
    "persian",
    "farsi",
    "whisper",
    "audio",
    "video",
    "gpu",
    "cuda",
    "nlp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "certifi>=2025.10.5",
    "click>=8.3.0",
    "colorama>=0.4.6",
    "faster-whisper>=1.2.1",
    "ctranslate2>=4.6.1",
    "openai>=1.86.0",
    "ffmpeg-python>=0.1.17",
    "pydub>=0.25.1",
    "av>=16.0.1",
    "coloredlogs>=15.0.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
persian = [
    "hazm>=0.10.0",
]
gpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.12",
    "black>=25.1.0",
    "mypy>=1.16.0",
    "types-pyyaml>=6.0.12",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5",
    "mkdocstrings>=0.29.1",
]
all = [
    "persian-audio-transcriber[persian,gpu,dev,docs]",
]

[project.scripts]
persian-transcriber = "persian_transcriber.cli:main"
vtranscribe = "persian_transcriber.cli:main"

[project.urls]
Homepage = "https://github.com/DarkOracle10/persian-audio-transcriber"
Documentation = "https://github.com/DarkOracle10/persian-audio-transcriber#readme"
Repository = "https://github.com/DarkOracle10/persian-audio-transcriber.git"
Issues = "https://github.com/DarkOracle10/persian-audio-transcriber/issues"
Changelog = "https://github.com/DarkOracle10/persian-audio-transcriber/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "faster_whisper.*",
    "hazm.*",
    "pydub.*",
    "speech_recognition.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
